fixed backgron d on dashboard and matches page. content is no longer cut off. removed media query making background solid on mobile

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -4,7 +4,11 @@
     right: 0;
     bottom: 0;
     left: 0;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
+}
+
+.background-2::-webkit-scrollbar, .opaque-background-2::-webkit-scrollbar {
+    display: none;
 }
 
 .background-2 {
@@ -16,9 +20,3 @@
 .opaque-background-2 {
     background: #000000a5;
 }
-
-@media only screen and (max-width: 600px) {
-    .background-2 {
-      background: #0f1711;
-    }
-  }
